[gd_scene load_steps=14 format=2]

[ext_resource path="res://enemy.gd" type="Script" id=1]
[ext_resource path="res://enemys/enemy_v2.png" type="Texture" id=2]
[ext_resource path="res://enemys/blood - left 1.png" type="Texture" id=3]
[ext_resource path="res://exp_blood.tres" type="Animation" id=4]
[ext_resource path="res://blood.tres" type="Animation" id=5]
[ext_resource path="res://enemys/exp2_0.png" type="Texture" id=6]
[ext_resource path="res://enemys/blood_exp.wav" type="AudioStream" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 1.64692, 0, 0, Vector2( 0.974359, 0.236364 ), 2.27922, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 50.94
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.46
angular_velocity = 173.12
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 6.46
scale_curve = SubResource( 2 )
color = Color( 0.682353, 0, 0, 1 )
hue_variation = -1.0

[sub_resource type="Animation" id=4]
resource_name = "blood"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("blood:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "exp_blood"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("exp_blood:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.164938 ),
"update": 1,
"values": [ true ]
}

[node name="enemy" type="Area2D"]
gravity = 0.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
z_index = -3
emitting = false
amount = 20
lifetime = 4.18
one_shot = true
speed_scale = 2.02
explosiveness = 0.34
process_material = SubResource( 3 )

[node name="blood_hit" type="AnimationPlayer" parent="."]
playback_speed = 20.0
anims/blood = ExtResource( 5 )
anims/exp_blood = ExtResource( 4 )

[node name="anim_exp" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/blood = SubResource( 4 )
anims/exp_blood = SubResource( 5 )

[node name="blood" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
vframes = 4
hframes = 4
frame = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.865237, -1.20262 )
polygon = PoolVector2Array( 50.6158, -0.248634, 22.3588, 18.9318, 21.2283, 39.3948, -9.38361, 24.1982, -43.0567, -0.0283958, -4.99323, -27.8487, 23.6773, -38.7909, 19.524, -16.0893 )

[node name="exp_blood" type="Sprite" parent="."]
visible = false
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
vframes = 4
hframes = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
pitch_scale = 0.82

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 800, 0 )

[node name="debug_spr" type="Sprite" parent="RayCast2D"]
visible = false
position = Vector2( 411.973, 0.929886 )
rotation = 1.5708
scale = Vector2( 0.062, 11.635 )
texture = ExtResource( 8 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
